// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BP_NativeProperties Properties 1`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "String",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 1,
    "size": 11,
    "typeName": "StrProperty",
  },
  "value": {
    "type": "string",
    "value": "String",
  },
}
`;

exports[`BP_NativeProperties Properties 2`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector3f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(Vector3f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 3`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector3d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Vector3d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 4`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Vector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 5`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int32Point",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Int32Point(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 6`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int64Point",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Int64Point(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 7`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint32Point",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Uint32Point(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 8`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint64Point",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Uint64Point(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 9`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "IntPoint",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(IntPoint(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 10`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "UintPoint",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(UintPoint(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 11`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int32Vector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Int32Vector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 12`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int64Vector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Int64Vector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 13`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint32Vector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Uint32Vector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 14`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint64Vector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Uint64Vector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 15`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "IntVector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(IntVector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 16`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "UintVector2",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(UintVector2(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 17`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int32Vector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(Int32Vector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 18`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int64Vector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Int64Vector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 19`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint32Vector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(Uint32Vector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 20`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint64Vector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Uint64Vector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 21`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "IntVector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(IntVector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 0,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 22`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "UintVector",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(UintVector(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector3 {
      "X": 1,
      "Y": 2,
      "Z": 0,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 23`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int32Vector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Int32Vector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 24`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Int64Vector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Int64Vector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 25`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint32Vector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Uint32Vector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 26`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Uint64Vector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Uint64Vector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 27`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "IntVector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(IntVector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 28`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "UintVector4",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(UintVector4(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 29`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector2f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Vector2f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector2 {
      "X": 1,
      "Y": 2,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 30`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector4f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Vector4f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 31`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Vector4d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Vector4d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FVector4 {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 32`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Plane4f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Plane4f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FPlane {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 33`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Plane4d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Plane4d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FPlane {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 34`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Plane",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Plane(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FPlane {
      "W": 4,
      "X": 1,
      "Y": 2,
      "Z": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 35`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Rotator3f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 12,
    "typeName": "StructProperty(Rotator3f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FRotator {
      "Pitch": 2,
      "Roll": 1,
      "Yaw": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 36`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Rotator3d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Rotator3d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FRotator {
      "Pitch": 2,
      "Roll": 1,
      "Yaw": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 37`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Rotator",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 24,
    "typeName": "StructProperty(Rotator(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FRotator {
      "Pitch": 2,
      "Roll": 1,
      "Yaw": 3,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 38`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Box3f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 25,
    "typeName": "StructProperty(Box3f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FBox {
      "IsValid": true,
      "Max": FVector3 {
        "X": 4,
        "Y": 5,
        "Z": 6,
      },
      "Min": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 39`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Box3d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 49,
    "typeName": "StructProperty(Box3d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FBox {
      "IsValid": true,
      "Max": FVector3 {
        "X": 4,
        "Y": 5,
        "Z": 6,
      },
      "Min": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 40`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Box",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 49,
    "typeName": "StructProperty(Box(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FBox {
      "IsValid": true,
      "Max": FVector3 {
        "X": 4,
        "Y": 5,
        "Z": 6,
      },
      "Min": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 41`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Matrix44f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 64,
    "typeName": "StructProperty(Matrix44f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FMatrix44 {
      "matrix": [
        5,
        0,
        0,
        0,
        0,
        6,
        -0,
        0,
        -0,
        0,
        7,
        0,
        1,
        2,
        3,
        1,
      ],
    },
  },
}
`;

exports[`BP_NativeProperties Properties 42`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Matrix44d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 128,
    "typeName": "StructProperty(Matrix44d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FMatrix44 {
      "matrix": [
        4.953687196510136,
        0.5206535045345707,
        0.43577871373829075,
        0,
        -0.5893647900741561,
        5.9564087360337545,
        -0.4169461758088421,
        0,
        -0.6563108125292763,
        0.42200393727262686,
        6.95637612513035,
        0,
        1,
        2,
        3,
        1,
      ],
    },
  },
}
`;

exports[`BP_NativeProperties Properties 43`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Matrix",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 128,
    "typeName": "StructProperty(Matrix(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FMatrix44 {
      "matrix": [
        4.953687,
        0.520654,
        0.435779,
        0,
        -0.589365,
        5.956409,
        -0.416946,
        0,
        -0.656311,
        0.422004,
        6.956376,
        0,
        1,
        2,
        3,
        1,
      ],
    },
  },
}
`;

exports[`BP_NativeProperties Properties 44`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "LinearColor",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(LinearColor(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FLinearColor {
      "A": 0.4000000059604645,
      "B": 0.30000001192092896,
      "G": 0.10000000149011612,
      "R": 0.20000000298023224,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 45`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Color",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 4,
    "typeName": "StructProperty(Color(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FColor {
      "A": 4,
      "B": 3,
      "G": 2,
      "R": 1,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 46`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Quat4f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Quat4f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FQuat {
      "W": 0.9994710087776184,
      "X": -0.00826538261026144,
      "Y": -0.017674118280410767,
      "Z": 0.02601972036063671,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 47`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Quat4d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Quat4d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FQuat {
      "W": 0.9994710014809092,
      "X": -0.008265384143125826,
      "Y": -0.017674117366400597,
      "Z": 0.026019727112995272,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 48`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Quat",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 32,
    "typeName": "StructProperty(Quat(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FQuat {
      "W": 0.9994710014809092,
      "X": -0.008265384143125826,
      "Y": -0.017674117366400597,
      "Z": 0.026019727112995272,
    },
  },
}
`;

exports[`BP_NativeProperties Properties 49`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "TwoVectors",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 48,
    "typeName": "StructProperty(TwoVectors(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FTwoVectors {
      "V1": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
      "V2": FVector3 {
        "X": 4,
        "Y": 5,
        "Z": 6,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 50`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Guid",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 16,
    "typeName": "StructProperty(Guid(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": "{c72bebc8-430c-89fb-80ad-acaf2c9fb6a5}",
  },
}
`;

exports[`BP_NativeProperties Properties 51`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Transform3f",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 40,
    "typeName": "StructProperty(Transform3f(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FTransform {
      "Rotation": FQuat {
        "W": 0.9971510171890259,
        "X": -0.03253708407282829,
        "Y": -0.045357827097177505,
        "Z": 0.05073421075940132,
      },
      "Scale3D": FVector3 {
        "X": 7,
        "Y": 8,
        "Z": 9,
      },
      "Translation": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 52`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Transform3d",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 80,
    "typeName": "StructProperty(Transform3d(/Script/CoreUObject))",
  },
  "value": {
    "type": "native-struct",
    "value": FTransform {
      "Rotation": FQuat {
        "W": 0.997151,
        "X": -0.032537,
        "Y": -0.045358,
        "Z": 0.050734,
      },
      "Scale3D": FVector3 {
        "X": 7,
        "Y": 8,
        "Z": 9,
      },
      "Translation": FVector3 {
        "X": 1,
        "Y": 2,
        "Z": 3,
      },
    },
  },
}
`;

exports[`BP_NativeProperties Properties 53`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Transform",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 1,
    "size": 235,
    "typeName": "StructProperty(Transform(/Script/CoreUObject))",
  },
  "value": {
    "type": "struct",
    "value": [
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": false,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Rotation",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 2,
          "size": 32,
          "typeName": "StructProperty(Quat(/Script/CoreUObject))",
        },
        "value": {
          "type": "native-struct",
          "value": FQuat {
            "W": 0.997151,
            "X": -0.032537,
            "Y": -0.045358,
            "Z": 0.050734,
          },
        },
      },
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": false,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Translation",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 2,
          "size": 24,
          "typeName": "StructProperty(Vector(/Script/CoreUObject))",
        },
        "value": {
          "type": "native-struct",
          "value": FVector3 {
            "X": 1,
            "Y": 2,
            "Z": 3,
          },
        },
      },
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": false,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Scale3D",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 2,
          "size": 24,
          "typeName": "StructProperty(Vector(/Script/CoreUObject))",
        },
        "value": {
          "type": "native-struct",
          "value": FVector3 {
            "X": 7,
            "Y": 8,
            "Z": 9,
          },
        },
      },
    ],
  },
}
`;

exports[`BP_NativeProperties Properties 54`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "DateTime",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(DateTime(/Script/CoreUObject))",
  },
  "value": {
    "message": "Cannot read property: Error: Invalid name index: 2072870016 (type: StructProperty(DateTime(/Script/CoreUObject)))",
    "type": "error",
  },
}
`;

exports[`BP_NativeProperties Properties 55`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Timespan",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 8,
    "typeName": "StructProperty(Timespan(/Script/CoreUObject))",
  },
  "value": {
    "message": "Cannot read property: Error: Invalid name index: -539754489 (type: StructProperty(Timespan(/Script/CoreUObject)))",
    "type": "error",
  },
}
`;

exports[`BP_NativeProperties Properties 56`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "FrameNumber",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 4,
    "typeName": "StructProperty(FrameNumber(/Script/CoreUObject))",
  },
  "value": {
    "message": "Cannot read property: Error: End of file (type: StructProperty(FrameNumber(/Script/CoreUObject)))",
    "type": "error",
  },
}
`;

exports[`BP_NativeProperties Properties 57`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "SoftClassPath",
    "overrideOperation": 0,
    "propertyGuid": null,
    "serializeType": 2,
    "size": 4,
    "typeName": "StructProperty(SoftClassPath(/Script/CoreUObject))",
  },
  "value": {
    "message": "Cannot read property: Error: End of file (type: StructProperty(SoftClassPath(/Script/CoreUObject)))",
    "type": "error",
  },
}
`;

exports[`BP_StructProperties Properties 1`] = `
TaggedProperty {
  "tag": FPropertyTag {
    "arrayIndex": 0,
    "boolVal": false,
    "experimentalOverridableLogic": false,
    "legacyData": null,
    "name": "Struct",
    "overrideOperation": 0,
    "propertyGuid": "{a9e5634b-4526-4f4b-6cb4-91934b2d720c}",
    "serializeType": 1,
    "size": 97,
    "typeName": "StructProperty(BPS_BlueprintStruct(/Game/BPS_BlueprintStruct),c09f9868-40e3-c215-4f33-f088bdf2d890)",
  },
  "value": {
    "type": "struct",
    "value": [
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": true,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Var1_1_A561D76C45FDC6266ACB0889ED060532",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 1,
          "size": 0,
          "typeName": "BoolProperty",
        },
        "value": {
          "type": "boolean",
          "value": true,
        },
      },
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": false,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Var2_4_E461884E44163CAA070C1EA0F2F08889",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 1,
          "size": 4,
          "typeName": "IntProperty",
        },
        "value": {
          "type": "numeric",
          "value": 123,
        },
      },
      TaggedProperty {
        "tag": FPropertyTag {
          "arrayIndex": 0,
          "boolVal": false,
          "experimentalOverridableLogic": false,
          "legacyData": null,
          "name": "Var3_7_339190BD408E6DF737A10283565B6928",
          "overrideOperation": 0,
          "propertyGuid": null,
          "serializeType": 1,
          "size": 10,
          "typeName": "StrProperty",
        },
        "value": {
          "type": "string",
          "value": "Hello",
        },
      },
    ],
  },
}
`;
